Fix examples rendering wrong on mobile

--- a/src/subtitulamos/resources/assets/css/rules.scss
+++ b/src/subtitulamos/resources/assets/css/rules.scss
@@ -124,6 +124,7 @@ ol {
       .line-number,
       .detail {
         color: var(--color-gray-c);
+        word-break: keep-all;
       }
 
       .line-number {
